--- a/src/scraping/templates/scraping/home.html
+++ b/src/scraping/templates/scraping/home.html
@@ -16,11 +16,16 @@
 
             </div>
         </div>
-
+    {% empty %}
+        <div class="row">
+            <div class="mx-auto">
+                <h3>К сожалению, по Вашему запросу ничего не найдено</h3>
+            </div>
+        </div>
 
     {% endfor %}
-<div class="row mx-auto">
-    <div class="col-md-6">
+<div class="row">
+    <div class="col-md-6 mx-auto">
         <form method="GET" action="">
             <div class="form-group">
                 {{ form.as_p }}
