--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,9 +8,10 @@
     <title>{% block title %}My amazing site{% endblock %}</title>
   </head>
   <body>
+  <div class='container'>
 
       <nav class="navbar navbar-expand-lg navbar-dark-light bg-light">
-      <a class="navbar-brand" href="#" id="brand">Navbar</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Склад</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,7 +33,7 @@
           </ul>
         </div>
       </nav>
-
+    </div>
     <div class="container">
       {% block content %}{% endblock %}
     </div>
