--- a/src/accounts/templates/accounts/update.html
+++ b/src/accounts/templates/accounts/update.html
@@ -5,8 +5,8 @@
 {% block content %}
 
 <div class="row ">
-    <div class="col-md-8 mx-auto">
-        <h4 class="my-2">Настройки</h4>
+    <div class="col-md-8 mx-auto my-3">
+        <h4 class="my-2 text-center">Настройки аккаунта</h4>
     <form method="POST" action="">{% csrf_token %}
         <div class="form-group">
         {{ form.as_p }}
@@ -15,10 +15,11 @@
     </form>
 
     <form method="POST" action="{% url 'accounts:delete' %} ">{% csrf_token %}
-                <button type="submit" class="btn btn-danger my-2 ">Удалить аккаунт</button>
+                <button type="submit" class="btn btn-danger my-2 text-center">Удалить аккаунт</button>
     </form>
 
     </div>
 </div>
+
 
 {% endblock %}
